# cs-trans_scripts

./: .gitignore  Makefile  README.md  pyproject.toml
cs_trans_scripts/: __init__.py  normalize_cs_json.py  normalize_json.py  patch_filtered_by_pointers.py  pointers_json.py  replace_using_table.py  search_json.py  trans_table.py
