[tool.poetry]
name = "cs-trans-scripts"
version = "0.1.0"
description = "Cultist Simulatorの翻訳支援スクリプト"
authors = [ "Hiroshi Miura <hirmiura@gmail.com>" ]
license = "MIT"
readme = "README.md"
packages = [ { include = "cs_trans_scripts" } ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.scripts]
format_json                = "cs_trans_scripts.format_json:main"
normalize_json             = "cs_trans_scripts.normalize_json:main"
patch_filtered_by_pointers = "cs_trans_scripts.patch_filtered_by_pointers:main"
pointers_json              = "cs_trans_scripts.pointers_json:main"


[tool.poetry.dependencies]
python    = "^3.11"
dirtyjson = "^1.0.8"
jsonpatch = "^1.32"


[tool.poetry.group.dev.dependencies]
black            = "^23.3.0"
flake8           = "^6.0.0"
flake8-pyproject = "^1.2.3"
isort            = "^5.12.0"
mypy             = "^1.3.0"
pytest           = "^7.3.1"


[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional   = true
warn_redundant_casts   = true
warn_unused_ignores    = false


[tool.black]
line-length = 100
target-version = [ 'py311' ]
include = '\.pyi?$'
exclude = '''
(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.vscode
)
'''


[tool.flake8]
exclude         = [ ".git", ".mypy_cache", ".pytest_cache", ".venv", "__pycache__", "tests/*" ]
ignore          = "E203,W503"
max-complexity  = 10
max-line-length = 100


[tool.isort]
include_trailing_comma = true
line_length            = 100
multi_line_output      = 3
profile                = "black"
